# global-context

./: .gitignore  README.md  _global_context.pth  pyproject.toml
global_context/: __init__.py  bootstrap.py  paths.py
global_context/backends/: __init__.py  base.py  chroma.py
global_context/cli/: __init__.py  app.py
global_context/core/: __init__.py  models.py  store.py
global_context/graph/: __init__.py  kg.py
global_context/hooks/: __init__.py  autosave.py  example_settings.json  recall.py
global_context/mcp/: __init__.py  server.py
global_context/mining/: __init__.py  files.py  transcripts.py
global_context/sessions/: __init__.py  importer.py  parser.py  scanner.py
global_context/skill/: SKILL.md  __init__.py
global_context/storage/: __init__.py  base.py  chroma_backend.py  factory.py  json_backend.py  sql_backend.py
tests/: test_graph.py  test_models.py  test_sessions.py  test_storage_backends.py
