[project]
name = "global-context"
version = "0.2.0"
description = "Persistent conversation and project context store for Claude Code."
authors = [
    {name = "Fernando Celmer", email = "email@fernandocelmer.com"},
]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["claude", "context", "memory", "rag", "llm"]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "sqlalchemy>=2.0.30",
    "chromadb>=0.5.0",
    "platformdirs>=4.2.0",
]

[project.scripts]
gctx = "global_context.cli.app:app"
global-context = "global_context.cli.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["global_context*"]

[tool.setuptools.package-data]
"global_context.skill" = ["SKILL.md"]

[tool.setuptools.data-files]
"" = ["_global_context.pth"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
